# ghef_388z

./: .gitignore  README.md  Song_Structures.ipynb
Docs/: .~lock.milestone 1 writeup.odt#  388Z final writeup.docx  final project report  milestone 1 writeup.odt
parsing/: arianagrande.txt  combining.txt  parse_text  parse_text.rs
rs_natural_sandbox/: Cargo.toml
rs_natural_sandbox/src/: main.rs
song_structures/: Cargo.toml
song_structures/lyrics/cardi_b/: bartier_cardi.txt  be_careful.txt  bodak_yellow.txt  i_like_it.txt  money.txt  motorsport.txt  thotiana_(cardi_b_remix).txt  wap.txt
song_structures/lyrics/doja_cat/: 4_morant_(better_luck_next_time).txt  ain't_shit.txt  juicy.txt  kiss_me_more.txt  mooo!.txt  need_to_know.txt  rules.txt  say_so.txt  say_so_(remix).txt  ​motive.txt
song_structures/lyrics/lizzo/: boys.txt  cuz_i_love_you.txt  good_as_hell.txt  good_as_hell_(remix).txt  juice.txt  like_a_girl.txt  rumors.txt  soulmate.txt  tempo.txt  truth_hurts.txt
song_structures/src/: main.rs
