[package]
name = "song_structures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genius-rs = "0.4.0"
threadpool = "1.8.1"
executor = "0.8.0"
futures = "0.3.17"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
