[package]
name = "song_structures"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genius-rs = "0.4.0"
reqwest = { version = "0.11", features = ["json"] }
select = "0.5.0"
selectors = "0.23.0"
scraper = "0.12.0"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
regex = "0.1.41"
